--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ section {
     /* background-image : linear-gradient(90deg,#eb5b2b,#f37248,#faa86e); */
 
   /* background-color: #d7caef; */
-  padding: 25px 13%;
+  padding: 40px 13%;
 }
 /* section{
 	padding: 80px 13%; 
@@ -580,6 +580,9 @@ li .color {
    }
   }
  /* footer start  */
+ .footer-container {
+  padding-bottom: 60px
+ }
  .footer-container  .footer-logo{
   width: 175px;
   height: 78px;
@@ -650,7 +653,7 @@ display: block;
 }
 .footer-container .footer p strong i{
 /* background-color: #685f78; */
-font-size: 1.4rem;
+font-size: 1.6rem;
 color: var(--main-color);
 /* color:linear-gradient(90deg,#eb5b2b,#f37248,#faa86e) !important; */
 
