--- a/style.css
+++ b/style.css
@@ -329,11 +329,6 @@ background: linear-gradient(45deg, #fa2424,#fb8721);;
   text-align: center;
   border-bottom:1px solid #e0e0e0;
 
-  /* gap: 15px; */
-  /* border-radius: 4%; */
-  /* margin-left: 40%; */
-  /* justify-content: center; */
-  /* align-items: center; */
 }
 
 
@@ -538,9 +533,6 @@ padding: 0px 10px;
   transition-duration: 1sec;
   cursor: pointer;
 }
-
-
-
 
 
 
@@ -766,13 +758,92 @@ padding-bottom: 10px;
 }
 
 
+/* contact */
+
+.contact-main{
+  /* background-color: #62e130; */
+}
+
+ .contact-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 250px;
+  /* grid-auto-columns: 100px; */
+  /* grid-gap: 20px; */
+}
+
+.contact-container {
+  background-color: #fff;
+  /* border: 1px solid #666; */
+  /* padding: 20px; */
+}
+.contact-item1 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 30px;
+  color: white;
+  background: linear-gradient(45deg, #df1919,#fb8721);
+}
+
+.contact-item1 h1{
+  /* color: white; */
+font-size: 2.3rem;
+font-weight: 700;
+}
+
+.contact-item1 p{
+  /* background-color: rgb(156, 91, 91); */
+  /* margin-top: -15px; */
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 10px 0px;
+}
 
 
+.contact-item2 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 30px;
 
+  color: white;
+  background: linear-gradient(45deg, #2c164e,#382a7e);
+}
 
+.contact-item2 .btn {
+  padding: 20px 25px;
+  font-size: 1rem;
+  font-weight: 500;
+  background: linear-gradient(45deg, #df1919,#fb8721);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  margin-left: 20%;
+}
+.contact-item2 .btn:hover {
+  background-color: #e3420c;  
+  }
+.contact-item2 .contact-menu{
+  background-color: #62e130;
+  display: contents;
+/* margin-right: 20px; */
+}
 
+.contact-item2 .contact-menu  h3{
+ font-size: 1rem;
+ font-weight: 400;
+ padding: 10px;
+}
+.contact-item2 .contact-menu h4{
+  color:#e3420c ;
 
-
+}
+.contact-item2 .contact-menu .fa{
+  color:#e3420c ;
+  font-size: 4rem;
+  margin-right: 20px;
+}
 
 
  /* footer start  */
