Some changes added

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- 
+
 /*=============== HEADER & NAV ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap");
 
@@ -295,7 +295,6 @@ background: linear-gradient(45deg, #fa2424,#fb8721);;
 /* .swiper-slide:nth-child(2n) {
   width: 60%;
 }
-
 .swiper-slide:nth-child(3n) {
   width: 40%;
 } */
@@ -647,7 +646,6 @@ section{
   font-size: 1rem;
   color: rgb(170, 160, 160);
   font-weight: 700;
-
 } */
 
 .we__offer_content a{
@@ -758,6 +756,10 @@ padding-bottom: 10px;
 }
 
 
+
+
+
+
 /*SERVICES  */
 
 .services{
@@ -771,7 +773,7 @@ height: 100vh;
   /* background-color: #62e130; */
   /* display: grid; */
   /* grid-template-columns: repeat(2, 1fr); */
-  /* gap: 2rem; */
+  gap: 2rem;
   /* grid-auto-rows: 300px; */
   /* grid-auto-columns: 300px; */
 left: 0;
@@ -815,7 +817,6 @@ flex-wrap: wrap;
 }
 
 /* .service-menu  ul li{
-
 } */
 .service-menu  ul li a{
   color: rgb(71, 71, 110);
@@ -849,6 +850,12 @@ border-bottom: 2px solid #f66962;
   text-align: center;
 
 }
+.service-text h3 .fa{
+  color: rgb(245, 75, 33); ;
+font-size: 1.5rem;
+}
+
+
 .service-text h3 {
   /* font-size: var(--h2-font); */
   /* line-height: 1.2; */
@@ -889,82 +896,58 @@ padding: 20px;
  border-bottom: 1px solid  rgb(245, 75, 33); 
  
 }
-.about-text p {
+/* .about-text p {
   font-size: var(--p-font);
   color: var(--second-color);
   font-weight: 500;
   line-height: 30px;
   margin-bottom: 10px;
-}
+} */
 
 .service-heading p{
-  color: rgb(151, 147, 147);
+  color: rgb(128, 127, 132);
   margin-bottom: 30px;
   font-weight: 500;
   font-size: 1.2rem;
 }
 
 
-.about-text h5 {
-  font-size: 20px;
-  /* padding: 10px; */
-  /* margin-bottom: 70px; */
-}
-.about-content{
-  padding: 10px 20px 0px 20px;
-  display: flex;
-  flex-wrap: wrap;
-  /* background-color: #4267B2; */
-/* margin-bottom: 20px; */
-/* justify-content: center; */
 
-}
 
-.about-text span{
-  padding:5px 50px  6px 0px;
-  /* background-color: #E1306C; */
-margin-bottom: 20px;
-font-size: 1.1rem;
-font-weight: 600;
-color: rgb(27, 27, 90);
-}
 
-.about-text span .fa{
-  color: rgb(245, 75, 33); ;
-font-size: 1.4rem;
-}
-.about-text h6 {
-  margin-top: -4%;
-  color: rgb(245, 75, 33); ;
-  font-size: 4rem;
-  padding: 20px;
-  margin-bottom: 10px;
-}
-.about-text h6 span{
-  color: rgb(167, 158, 158);
-  font-size: 1.4rem;
-padding: 0px 10px;
-}
-/* .about-text h6 .fa{
-  color: rgb(245, 75, 33); ;
-  font-size: 4.0rem;
-  
-} */
-.about-text .btn {
-  
-  /* margin-top: 12% !important; */
-  font-size: 1.3rem;
-  font-size: 600;
-  color: white;
-  border: 2px solid transparent;
-  border-radius: 10px;
-  background: linear-gradient(45deg, #fa2424,#fb8721);;
 
-  /* background: linear-gradient(90deg,#eb5b2b,#f37248,#faa86e); */
-  /* background-color: var(--main-color); */
-  margin-left: 2%;
-  padding: 12px 20px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1422,7 +1405,5 @@ line-height: 40px;
     margin-top: -12%;
   }
   }
-
-
 
 
