--- a/style.css
+++ b/style.css
@@ -562,7 +562,7 @@ section{
 .popular_heading  p {
   font-size: 1.1rem;
   font-weight: 500;
-  color: rgb(170, 160, 160);
+  color: gray;
   text-align: center;
   padding: 20px 0px;
 }
@@ -631,7 +631,8 @@ section{
 }
 
 .we__offer_content .subcontent {
-  color: rgb(179, 175, 175);
+  color: rgb(153, 150, 150);
+  /* color: rgb(179, 175, 175); */
   font-size: 1.1rem;
   font-weight: 500;
   padding: 15px 10px;
@@ -696,7 +697,7 @@ section{
 .swiper-slide .expert h3{
   padding: 10px;
   color: rgb(71, 71,1px 110);
-
+text-align: center;
 }
 .expert-heading {
   display: grid;
@@ -732,6 +733,7 @@ section{
 color: gray;
 font-size: 1.1rem;
 padding-bottom: 10px;
+text-align: center;
   }
 .swiper {
   width: 100%;
@@ -739,10 +741,9 @@ padding-bottom: 10px;
 }
 
 .swiper-slide {
-  text-align: center;
+  /* text-align: center; */
   font-size: 18px;
-  /* background: #fff; */
-  /* background-color: #465b52; */
+  background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -883,7 +884,7 @@ padding:17px;
 font-size: 2rem;
 font-weight: 700;
 text-align: left;
-padding: 20px;
+padding: 20px 20px 20px 0px;
 }
 .service-heading  h1 span{
   /* position: absolute; */
@@ -905,13 +906,11 @@ padding: 20px;
 } */
 
 .service-heading p{
-  color: rgb(128, 127, 132);
+  color: gray;
   margin-bottom: 30px;
   font-weight: 500;
   font-size: 1.2rem;
 }
-
-
 
 
 
@@ -1405,5 +1404,4 @@ line-height: 40px;
     margin-top: -12%;
   }
   }
-
 
